--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": ">=5.6.4"
     },
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Tukecx\\Base\\ThemesManagement\\": "src"
